--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
-        <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <link href="css/style.css" rel="stylesheet" type="text/css">
-        <link href="css/pages/dashboard.css" rel="stylesheet" type="text/css">
-        <link href="css/odometer.css" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="static/favicon.ico" type="image/x-icon">
+        <link href="static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/style.css" rel="stylesheet" type="text/css">
+        <link href="static/css/pages/dashboard.css" rel="stylesheet" type="text/css">
+        <link href="static/css/odometer.css" rel="stylesheet" type="text/css">
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
           <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -27,7 +27,7 @@
 
 		        <ul class="nav pull-right">
                             <li>
-                                <a target="_blank" href="http://github.com/afaqurk/linux-dash">
+                                <a target="_blank" href="https://github.com/DaniloQueiroz/linux-dash-py">
 			  	    <i class="lead icon-github-sign"></i> 
 				    <span class="lead">Contribute on GitHub</span>
 			        </a>
@@ -402,12 +402,12 @@
 
         <!-- Javascript-->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="js/jquery.js" type="text/javascript"></script>
-        <script src="js/jquery-ui.min.js" type="text/javascript"></script>
-        <script src="js/bootstrap.js" type="text/javascript"></script>
-        <script src="js/jquery.dataTables.min.js" type="text/javascript"></script>
-        <script src="js/odometer.js" type="text/javascript"></script>
-        <script src="js/dashboard.js" type="text/javascript"></script>
-        <script src="js/base.js" type="text/javascript"></script>
+        <script src="static/js/jquery.js" type="text/javascript"></script>
+        <script src="static/js/jquery-ui.min.js" type="text/javascript"></script>
+        <script src="static/js/bootstrap.js" type="text/javascript"></script>
+        <script src="static/js/jquery.dataTables.min.js" type="text/javascript"></script>
+        <script src="static/js/odometer.js" type="text/javascript"></script>
+        <script src="static/js/dashboard.js" type="text/javascript"></script>
+        <script src="static/js/base.js" type="text/javascript"></script>
     </body>
 </html>
